moment works with updates

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- header -->
     <div class="container">
         <div class="row">
+            <div id="rightnow"></div>
+        </div>
+        <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <p>Departures</p>
             </div>
@@ -33,18 +36,12 @@
                             <th>Train Name</th>
                             <th>Destination</th>
                             <th>Frequency(min)</th>
+                            <th>First Train</th>
                             <th>Next Arrival</th>
                             <th>Minutes Away</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
